--- a/project/mobile/class-attendance-system/src/pages/speaker-list/speaker-list.scss
+++ b/project/mobile/class-attendance-system/src/pages/speaker-list/speaker-list.scss
@@ -28,4 +28,13 @@ page-speaker-list {
     padding-left: 0;
     padding-right: 0;
   }
+  .BMap_pop{
+    top: 70px !important;
+}
+.BMap_bubble_content{
+    width: 95% !important;
+}
+.BMap_center{
+    top: 26px !important;
+}
 }
